force-app/main/default/objects/Merchant_Account_Payment__c/Merchant_Account_Payment__c.object-meta.xml
<CustomObject>
    <description>Merchant Account Payment Object</description>
    <label>Merchant Account Payment</label>
    <nameField>
        <displayFormat>MAP-{000000}</displayFormat>
        <label>Merchant Account Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Account Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>