force-app/main/default/objects/Merchant_Account_Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of the transaction</description>
    <inlineHelpText>The amount of the transaction</inlineHelpText>
    <label>amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>