force-app/main/default/objects/Merchant_Account_Payment__c/fields/Current_CAD__c.field-meta.xml
<CustomField>
    <fullName>Current_CAD__c</fullName>
    <description>Current CAD</description>
    <inlineHelpText>Current CAD</inlineHelpText>
    <label>Current CAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>