force-app/main/default/objects/Merchant_Account_Payment__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>leadId</label>
    <referenceTo>Merchant_Account__c</referenceTo>
    <relationshipLabel>Merchant Account Payments</relationshipLabel>
    <relationshipName>Merchant_Product_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>