force-app/main/default/objects/Merchant_Account_Payment__c/fields/Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check whether the payment has been processed while calculating Current Balance and CAD on Merchant Account</description>
    <inlineHelpText>Checks if amount on the record is used to calculate Current Balance and CAD on Merchant Account</inlineHelpText>
    <label>Payment Processed</label>
    <type>Checkbox</type>
</CustomField>