force-app/main/default/objects/Merchant_Account_Payment__c/fields/Previous_Balance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Balance__c</fullName>
    <description>Previous Balance</description>
    <inlineHelpText>Previous Balance</inlineHelpText>
    <label>Previous Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>