force-app/main/default/objects/Merchant_Account_Payment__c/fields/Previous_CAD__c.field-meta.xml
<CustomField>
    <fullName>Previous_CAD__c</fullName>
    <description>Previous CAD</description>
    <inlineHelpText>Previous CAD</inlineHelpText>
    <label>Previous CAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>