force-app/main/default/objects/Merchant_Account_Payment__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <description>How the transaction was processed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How the transaction was processed</inlineHelpText>
    <label>processor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>