force-app/main/default/objects/Merchant_Account_Payment__c/fields/TranDate__c.field-meta.xml
<CustomField>
    <fullName>TranDate__c</fullName>
    <description>The date of the transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of the transaction</inlineHelpText>
    <label>trandate</label>
    <type>Date</type>
</CustomField>