force-app/main/default/objects/Merchant_Account_Payment__c/fields/TranType__c.field-meta.xml
<CustomField>
    <fullName>TranType__c</fullName>
    <description>The type of transaction</description>
    <inlineHelpText>The type of transaction</inlineHelpText>
    <label>trantype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH Rejection Fees</fullName>
            </value>
            <value>
                <fullName>ACH Rejections</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Competitor Payoff</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Daily/Weekly ACH - US Bank</fullName>
            </value>
            <value>
                <fullName>Daily ACH</fullName>
            </value>
            <value>
                <fullName>Debit Memo</fullName>
            </value>
            <value>
                <fullName>Deferred Interest</fullName>
            </value>
            <value>
                <fullName>Deferred Premium</fullName>
            </value>
            <value>
                <fullName>Merchant Refund</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Recovery Payment</fullName>
            </value>
            <value>
                <fullName>Recovery Settlement</fullName>
            </value>
            <value>
                <fullName>US Bank ACH</fullName>
            </value>
            <value>
                <fullName>US Bank Daily ACH</fullName>
            </value>
            <value>
                <fullName>US Bank Rejection Fees</fullName>
            </value>
            <value>
                <fullName>US Bank Rejections</fullName>
            </value>
            <value>
                <fullName>Wells Daily ACH</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>