force-app/main/default/objects/Merchant_Account_Payment__c/listViews/All_Merchant_Account_Payments.listView-meta.xml
<ListView>
    <fullName>All_Merchant_Account_Payments</fullName>
    <columns>NAME</columns>
    <columns>LeadId__c</columns>
    <columns>Amount__c</columns>
    <columns>Processor__c</columns>
    <columns>TranDate__c</columns>
    <columns>TranType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Merchant Account Payments</label>
    <language>en_US</language>
    <sharedTo>
        <group>Merchant_Access</group>
    </sharedTo>
</ListView>